welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:13: error: object java.awt.Color is not a value
var T = new Array(Color)(h)
                  ^